# p11_concevoir-et-deployer-systeme-rag

./: .gitignore  README.md  fetch_openagenda.py  puls-events_chatbot.py  puls_events_chatbot.py  pyproject.toml  pytest.ini  run_pipeline.py
scripts/: clean_data.py  fetch_openagenda.py  search_index.py  vectorize.py
tests/: test_clean_data.py  test_fetch_openagenda.py  test_rag_pipeline.py
tests/fixtures/: events.json
